--- a/screen.css
+++ b/screen.css
@@ -4,7 +4,7 @@ html, body {
   width: 100%;
   padding: 0;
   margin: 0;
-  background: #eed;
+  background: #ddc;
   font-family: sans-serif;
 }
 
@@ -65,6 +65,7 @@ html, body {
 }
 
 .square {
+  background: #eed;
   border-radius: 6px;
   border-top-left-radius: 0;
   border: solid 1px #444;
