fixed Domain Restriction, added iframe Status Display and linked the ajaxListener, we now only need to ask the ajaxListener if a request occured on last element click, than to wait untill onReadyState == 4 to compare dom. Side note: Even if a request did not manage to modify the dom, dynamic state may have change in js background so this could be a good idea to mark nodes where ajax requests occured

--- a/style/screen.css
+++ b/style/screen.css
@@ -150,3 +150,11 @@ html, body {
   width: 400px;
   height: 50px;
 }
+
+#iframe-status th
+{
+    text-align: left;
+}
+#iframe-status .ready {
+    color: green;
+}
